# .eagle

./: .gitignore  .prettierrc  AGENTS.md  ARCHITECTURE.md  Cargo.toml  README.md  eagle.config.ts  eagle.ps1  index.ts  installer.ps1  package.json  rust-toolchain.toml  tsconfig.json
.github/workflows/: ci.yml  release.yml
commands/: _template.ps1  create.ps1  eagle.ps1  eaglecord.ps1  help.ps1  minecraft.ps1  spicetify.ps1  uninstall.ps1  update.ps1  version.ps1
core/: Install-EagleCord.ps1  Install-Project.ps1  Install-Spicetify.ps1  Install-Vencord.ps1  Show-Help.ps1  Show-Secret.ps1  Show-Version.ps1  Start-MinecraftServer.ps1  Uninstall-Script.ps1  Update-Script.ps1
eagle/: create-project.ps1  install-spicetify.ps1  install-vencord.ps1  show-help.ps1  show-version.ps1  start-clean.ps1  uninstall-script.ps1  update-apps.ps1  update-script.ps1
powershell/: eagle.ps1
powershell/core/: Install-Project.ps1  Install-Spicetify.ps1  Show-Secret.ps1  Start-MinecraftServer.ps1  Uninstall-Script.ps1
scripts/: check.ps1  check.sh  release.ps1
src/: cli.rs  cli.ts  context.rs  installer.ts  main.rs  net.rs  util.rs
src/commands/: create-project.ts  create.rs  eagle-cord.ts  eagle.rs  eagle.ts  eaglecord.rs  help.rs  help.ts  index.ts  minecraft.rs  minecraft.ts  mod.rs  spicetify.rs  spicetify.ts  status.ts  types.ts  uninstall.rs  uninstall.ts  update.rs  update.ts  version.rs  version.ts
src/commands/minecraft/: create.rs  fabric.rs  fs.rs  http.rs  mod.rs  paper.rs  start.rs
src/lib/: logger.ts
types/: shims.d.ts
