[package]
name = "eagle"
version = "2.8.8"
edition = "2024"

[dependencies]
anyhow = '1'
clap = { version = '4', features = ['std', 'help', 'usage', 'error-context'] }
crossterm = '0.29'
dialoguer = '0.11'
directories = '6'
inventory = '0.3'
time = { version = '0.3', features = ['local-offset'] }
ureq = '3'
which = '8'

[features]
default = []

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'

[package.metadata]
repository = 'https://github.com/prodbyeagle/eaglePowerShell'
